# kocmoc-core

./: .gitmodules  CMakeLists.txt  Doxyfile.in  README.txt
cmake/: GetGitRevisionDescription.cmake  findAssimp.cmake  findGLEW.cmake  findTinyXML.cmake
include/: Context.hpp  GitSHA1.h.in
include/kocmoc-core/: Context.hpp  GitSHA1.h.in  compiler.h  constants.hpp  gl.h  kocmoc-core.h  version.hpp  version.hpp.in
include/kocmoc-core/component/: CameraController.hpp  Component.hpp  Gizmo.hpp  Object.hpp  ObjectBehaviour.hpp  OverlayQuad.hpp  PointSprite.hpp  Renderable.hpp  RigidBody.hpp  Transform.hpp
include/kocmoc-core/componentSystem/: Component.hpp  Object.hpp
include/kocmoc-core/exception/: ParseErrorException.hpp  ResourceNotFoundException.hpp
include/kocmoc-core/input/: AnalogEventListener.hpp  ButtonEventListener.hpp  InputManager.hpp  KeyboardListener.hpp
include/kocmoc-core/math/: math.hpp
include/kocmoc-core/renderer/: BulletDebugDrawer.hpp  Context.hpp  FrameBuffer.hpp  FrameBuffer21.hpp  Material.hpp  RenderMesh.hpp  RenderMesh21.hpp  RenderPassEnum.hpp  Shader.hpp  ShaderManager.hpp  constants.hpp
include/kocmoc-core/resources/: ResourceManager.hpp
include/kocmoc-core/scene/: AssetLoader.hpp  AssimpLoggerStream.hpp  Camera.hpp  FilmCamera.hpp  FontRenderer.hpp  Image.hpp  ImageLoader.hpp  OrthoCamera.hpp  Quad.hpp  Renderable.hpp  Scene.hpp  SceneNode.hpp  SkyboxCamera.hpp  TriangleMesh.hpp
include/kocmoc-core/time/: Timer.hpp
include/kocmoc-core/types/: Symbol.hpp  types.h
include/kocmoc-core/util/: Properties.hpp  util.hpp
media/: kocmoc-core-config.xml.in
media/shaders/: base.frag  base.vert  overlay.frag  overlay.vert  post.frag  post.vert  text.frag  vertexColor.frag  vertexColor.vert
src/: CMakeLists.txt  Context.cpp  kocmoc-core-test.cpp  main.cpp  version.cpp
src/component/: CameraController.cpp  Gizmo.cpp  Object.cpp  ObjectBehaviour.cpp  OverlayQuad.cpp  PointSprite.cpp  Renderable.cpp  RigidBody.cpp  Transform.cpp
src/componentSystem/: Object.cpp
src/input/: InputManager.cpp
src/renderer/: BulletDebugDrawer.cpp  FrameBuffer21.cpp  Material.cpp  RenderMesh.cpp  RenderMesh21.cpp  RenderMesh21.hpp  Shader.cpp  ShaderManager.cpp
src/resources/: ResourceManager.cpp
src/scene/: AssetLoader.cpp  AssetLoader.h  FilmCamera.cpp  FontRenderer.cpp  ImageLoader.cpp  OrthoCamera.cpp  Quad.cpp  Scene.cpp  TriangleMesh.cpp
src/time/: Timer.cpp
src/types/: Symbol.cpp
src/util/: Properties.cpp  util.cpp
